[metadata]
name = PsiTurk
version = attr: psiturk.version.version_number
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
author = NYU Computation and Cognition Lab
author_email = authors@psiturk.org
description = An open platform for science on Amazon Mechanical Turk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NYUCCL/psiturk

[options]
install_requires =
  Flask_RESTful~=0.3.7
  boto3~=1.9.179
  cmd2~=0.9.14
  Flask_Login
  gunicorn[gevent]
  Flask # updated
  certifi~=2019.11.28
  pytz>=2020.1 # for panda
  user_agents~=2.0
  docopt~=0.6.2
  urllib3~=1.25.3
  Faker~=1.0.7
  requests~=2.22.0
  APScheduler~=3.6.1
  botocore~=1.12.179
  SQLAlchemy~=1.3.5
  future~=0.17.1
  python-dotenv>=0.21.0 # updated
  python_dateutil~=2.8.1
  pyOpenSSL~=22.0.0
  setproctitle~=1.1.10
  flask-socketio
  gevent-websocket
packages=
  psiturk
  psiturk.api
  psiturk.dashboard
include_package_data = True
zip_safe = False
setup_requires =
  pytest-runner

[options.extras_require]
dev =
  sphinx
  sphinx_rtd_theme
  sphinx-server
testing =
  pytest
  ciso8601~=2.1.3
  pytest-mock
  pytest-socket
  pytz

[options.entry_points]
console_scripts =
  psiturk-shell = psiturk.psiturk_shell:run
  psiturk = psiturk.command_line:process
  psiturk-server = psiturk.command_line:process
  psiturk-setup-example = psiturk.command_line:process
  psiturk-heroku-config = psiturk.command_line:process

[aliases]
test=pytest

[testenv]
deps = .[test]

[tool:pytest]
addopts = --disable-socket
